feat: 区域检验接口

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "antd": "^5.8.1",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "echarts": "^5.4.3",
     "eslint": "^8.46.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "http-proxy-middleware": "^2.0.6",
     "ol": "^7.4.0",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
