--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "ol": "^7.4.0",
     "prettier": "^3.0.0",
