--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@ GENERATE_SOURCEMAP=false
 GENERATE_LICENSE=false
 
 #线上环境
-REACT_APP_BASE_API=http://meetingcus.hdzstech.com:5005/no-paper-meeting/
+REACT_APP_BASE_API=http://47.105.148.202:10024/
